sfdx-source/OnlineProfile/main/default/objects/OnlineProfileConfig__c/OnlineProfileConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Online Profile</label>
</CustomObject>