sfdx-source/OnlineProfile/main/default/objects/OnlineProfileConfig__c/fields/BaseUrl__c.field-meta.xml
<CustomField>
    <fullName>BaseUrl__c</fullName>
    <label>ベースURL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>