sfdx-source/OnlineProfile/main/default/objects/OnlineProfileConfig__c/fields/DefaultViewCountLimit__c.field-meta.xml
<CustomField>
    <fullName>DefaultViewCountLimit__c</fullName>
    <defaultValue>300</defaultValue>
    <label>デフォルト表示回数制限</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>