sfdx-source/OnlineProfile/main/default/objects/OnlineProfileConfig__c/fields/DefaultViewExpirationDays__c.field-meta.xml
<CustomField>
    <fullName>DefaultViewExpirationDays__c</fullName>
    <defaultValue>14</defaultValue>
    <label>デフォルト表示有効日数</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>